<resources>
    <string name="app_name">InTrain</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dasbor</string>
    <string name="title_notifications">Notifikasi</string>
    <string name="title_profile">Profile</string>
    <string name="email_validation_hint">Masukkan Email</string>
    <string name="email_validation_isEmpty">Email tidak boleh kosong</string>
    <string name="email_validation_notValid">Email tidak valid</string>
    <string name="pass_isEmpty">Password tidak boleh kosong</string>
    <string name="pass_min_character">Panjang password minimal 6 karakter</string>
    <string name="pass_input_hint">Masukkan Password</string>
    <string name="Pass_hint">Masukkan Password</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="logo_intrain">Logo intrain</string>
    <string name="email">Email</string>
    <string name="input_email">Masukkan Email</string>
    <string name="Input_pass">Password</string>
    <string name="welcoming_message">Hai, Aldi!</string>
    <string name="course">Kursus</string>
    <string name="welcoming_message_2">Lihat kegiatan Anda hari ini</string>
    <string name="news">Berita</string>
    <string name="course_icon">Ikon Kursus</string>
    <string name="intrain_ai">Chatbot</string>
    <string name="intrain_ai_icon">Ikon InTrain.ai</string>
    <string name="cv_checker">Check CV</string>
    <string name="cv_checker_icon">Ikon Pengecekan CV</string>
    <string name="activity">Aktivitas</string>
    <string name="course_completed">Kursus Selesai</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hai, fragment kosong!</string>
    <string name="chat">Obrolan</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Fragment Pertama</string>
    <string name="second_fragment_label">Fragment Kedua</string>
    <string name="next">Berikutnya</string>
    <string name="previous">Sebelumnya</string>

    <string name="masukan_username">Masukkan Nama Pengguna</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="username">Nama Pengguna</string>
    <string name="masukkan_username">Masukkan Nama Pengguna</string>
    <string name="title_activity_mentor">MentorActivity</string>
    <string name="percent_home">0</string>
</resources>